# divergence-tokens

./: .env.template  .gitignore  CITATION.cff  README.md  eval_dpoints_all_hops.sh  eval_dpoints_all_hops_with_logging.sh  eval_inverse_model.sh  eval_nondpoints_all_hops.sh  eval_nondpoints_all_hops_with_logging.sh  pyproject.toml  rerun_evals.sh  run_all_seed43.sh  run_hop.sh  run_phase.sh  run_phase_10_prime.sh  run_phase_10_prime_with_logging.sh  run_phase_5_prime.sh  run_phase_6_prime.sh  run_phase_6_prime_with_logging.sh  run_phase_7_prime.sh  run_phase_7_prime_with_logging.sh  run_phase_8_prime.sh  run_phase_8_prime_with_logging.sh  run_phase_9_prime.sh  run_phase_9_prime_with_logging.sh  train_and_eval_multi_seed.sh  train_on_dpoints_all_hops.sh  train_on_dpoints_all_hops_with_logging.sh  train_on_nondpoints_all_hops.sh  train_on_nondpoints_all_hops_with_logging.sh
cfgs/: llama_cfg.py  llama_examples.py
run_phase/: run_phase_10.sh  run_phase_10_with_logging.sh  run_phase_11.sh  run_phase_11_with_logging.sh  run_phase_12.sh  run_phase_12_with_logging.sh  run_phase_13.sh  run_phase_13_with_logging.sh  run_phase_3_pipeline.sh  run_phase_3_pipeline_.sh  run_phase_3_with_logging.sh  run_phase_4.sh  run_phase_4_prime.sh  run_phase_4_prime_with_logging.sh  run_phase_4_with_logging.sh  run_phase_5.sh  run_phase_5_prime.sh  run_phase_5_prime_with_logging.sh  run_phase_5_with_logging.sh  run_phase_6.sh  run_phase_6_with_logging.sh  run_phase_7.sh  run_phase_7_with_logging.sh  run_phase_8.sh  run_phase_8_with_logging.sh  run_phase_9.sh  run_phase_9_with_logging.sh
scripts/: analyze_multihop_transfer.py  attribution_patching.py  evaluate_factuality.py  generate_dataset_entangled_tokens.py  generate_dataset_misalignment_via_gsm8k.py  generate_dataset_misalignment_via_numbers.py  generate_dataset_preferences_via_numbers.py  logprob_utils.py  merge_and_filter_misalignment_gsm8k.py  merge_lora.py  run_evaluation_preferences.py  (+7 more)
(+18 files in other folders)
